--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -18,20 +18,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cP-mU-aly">
-                                <rect key="frame" x="110" y="273" width="155" height="155"/>
+                                <rect key="frame" x="110" y="305.66666666666669" width="155" height="155"/>
                                 <state key="normal" image="Record"/>
                                 <connections>
                                     <action selector="recordButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sby-jB-W1S"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YA3-0b-1uz">
-                                <rect key="frame" x="134" y="436" width="107" height="21"/>
+                                <rect key="frame" x="134" y="468.66666666666669" width="107" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="khf-vb-aoY">
-                                <rect key="frame" x="155.66666666666666" y="465" width="64" height="64"/>
+                                <rect key="frame" x="155.66666666666666" y="497.66666666666674" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="64" id="V17-uF-wPd"/>
                                     <constraint firstAttribute="width" constant="64" id="s5V-ht-XYs"/>
@@ -45,7 +45,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="khf-vb-aoY" firstAttribute="top" secondItem="YA3-0b-1uz" secondAttribute="bottom" constant="8" id="1bH-U4-Xd7"/>
-                            <constraint firstItem="4cP-mU-aly" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-82.5" id="F3G-i3-oew"/>
+                            <constraint firstItem="4cP-mU-aly" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-50" id="F3G-i3-oew"/>
                             <constraint firstItem="khf-vb-aoY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TIY-hs-DPW"/>
                             <constraint firstItem="YA3-0b-1uz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YYT-Y2-cVd"/>
                             <constraint firstItem="4cP-mU-aly" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ds3-ya-9OR"/>
